--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -7,7 +7,11 @@
         <h2>Login</h2>
         {% if request.user.is_authenticated %}
             <p>
-                You are logged in with <strong>{{ request.user.username }}</strong>. Logout <a href="{% url "authors:logout" %}">here</a>
+                You are logged in with <strong>{{ request.user.username }}</strong>. Logout
+                <form action="{% url 'authors:logout' %}" method="POST" class="inline-form">
+                    {% csrf_token %}
+                    <button type="submit" class="plaintext-button">here</button>
+                </form>
             </p>
         {% endif %}
     </div>
